@@ -1,4 +1,5 @@
 0.03
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.02 2022-05-19T17:00:17+02:00
